--- a/MeetingApp/Base.lproj/Main.storyboard
+++ b/MeetingApp/Base.lproj/Main.storyboard
@@ -5,10 +5,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <scenes>
-        <!--Meeting Begin View Controller-->
+        <!--Begin Meeting View Controller-->
         <scene sceneID="6Em-2W-mJp">
             <objects>
-                <viewController id="2QN-cd-kZ6" customClass="MeetingBeginViewController" sceneMemberID="viewController">
+                <viewController id="2QN-cd-kZ6" customClass="BeginMeetingViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="I6a-SI-vav"/>
                         <viewControllerLayoutGuide type="bottom" id="ZpO-UQ-xoh"/>
@@ -40,7 +40,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2Gk-GQ-omd">
-                                <rect key="frame" x="20" y="249" width="335" height="379"/>
+                                <rect key="frame" x="0.0" y="249" width="375" height="418"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                         </subviews>
@@ -80,6 +80,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fOz-tr-dwL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-169.5" y="1533.5"/>
+        </scene>
+        <!--Set Meeting View Controller-->
+        <scene sceneID="Lsb-SM-RgL">
+            <objects>
+                <viewController id="zmI-nF-ehI" customClass="SetMeetingViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gAV-vh-UGg"/>
+                        <viewControllerLayoutGuide type="bottom" id="YvI-dx-Xhy"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="knP-X3-3Tp">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SG9-UB-e9w" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="389.5" y="1533.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="s2z-pc-Yp9">
